recursion.logo.dragoncurve.DragonCurve1.scala.error
Erreur de compilation :
DragonCurve1:6: error: ';' expected but '=' found.
    u : Double =(x+z)/2+(t-y)/2
               ^DragonCurve1:7: error: ';' expected but '=' found.
    v : Double =(y+t)/2-(z-x)/2
               ^